--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
+    "react-sortablejs": "^6.1.4",
     "remirror": "^1.0.75",
+    "sortablejs": "^1.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
